<resources>
    <string name="app_name">SocioX</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_email_address_or_mobile_number">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="from">from</string>
    <string name="company">Techzordic</string>
    <string name="sociox"><u>SocioX</u></string>
    <string name="language">English(UK)</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="t">\t</string>
    <string name="email">Email*</string>
    <string name="last_name">Last Name (Optional)</string>
    <string name="first_name">Input your Full Name</string>
    <string name="name">Name*</string>
    <string name="username">Username*</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="passwordd">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="are_you_above_18_years_of_age"> <u>I agree to the terms &amp; conditions </u> </string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="contact_no">Contact No.*</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="dd_mm_yyyy">dd / mm / yyyy</string>
    <string name="socioxe">Sociox</string>
    <string name="title_activity_post">.</string>
    <string name="search">Search</string>
    <string name="nickname">fullName</string>
    <string name="jai_shree_ram_n_jai_shree_ram">------------------------------------------------------------------------------------</string>
    <string name="username_comment"><b>username</b> caption caption caption caption caption caption caption</string>
    <string name="location">location</string>
    <string name="liked_by_username_and_12_others">Liked by <b>username</b> and <b>12</b> others</string>
    <string name="username_profile">username</string>
    <string name="view_all_comments">View all 2 comments</string>
    <string name="followers">Followers</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="username_nice_pic"><b>username</b> nice pic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_video_may_appear_in_pots_or_you_can_also_find_in_the_profile_tab_of_your_profile">Your Video may appear in posts or you can also find in the profile tab of your profile</string>
</resources>