<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CreateActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Spinner
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:entries="@array/languages"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@+id/logo3"
            app:layout_constraintStart_toStartOf="@+id/logo3"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo3" />

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/crown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language"
            app:tint="#F0113FD1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name1"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@drawable/bg_box"
                    android:drawableStart="@drawable/name"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/email"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/emails"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@drawable/bg_box"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:ems="12"
                    android:hint="@string/username_email_address_or_mobile_number"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/contact_no"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/country_code"
                        android:background="@drawable/bg_box"
                        android:ems="10"
                        android:freezesText="true"
                        android:hint="Enter your mobile number"
                        android:inputType="phone"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="2dp"
                        android:textSize="12sp" />

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_defaultNameCode="IND"
                        app:ccp_showFlag="true"
                        app:ccp_showFullName="false"
                        app:ccp_showNameCode="true"
                        app:ccp_textSize="13sp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/username"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@drawable/bg_box"
                    android:ems="10"
                    android:hint="Enter your unique username"
                    android:inputType="text"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/date_of_birth"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@drawable/bg_box"
                    android:focusable="false"
                    android:drawableStart="@drawable/dob1"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/dd_mm_yyyy"
                    android:inputType="none"
                    android:paddingHorizontal="8dp"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/gender"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/genders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contextClickable="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/male"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/female"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </RadioGroup>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:id="@+id/relative1"
                    >

                    <TextView
                        android:id="@+id/passW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:text="@string/passwordd"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_below="@id/passW"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:ems="10"
                        android:paddingHorizontal="8dp"
                        android:textSize="12sp"
                        android:hint="@string/password"
                        android:background="@drawable/bg_box"
                        android:inputType="textPassword" />

                    <ImageView
                        android:id="@+id/passwordShowHide2"
                        android:layout_width="30dp"
                        android:layout_height="28dp"
                        android:layout_below="@id/passW"
                        android:layout_marginEnd="40dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_hide_pwd"/>

                </RelativeLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/confirm_password"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@drawable/bg_box"
                    android:ems="10"
                    android:hint="@string/confirm_your_password"
                    android:inputType="textVisiblePassword"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:checked="false"
                       />

                    <TextView
                        android:id="@+id/terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/are_you_above_18_years_of_age"
                        android:textColor="#D41204"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="@drawable/login_bg"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:text="@string/already_have_an_account"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/login1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="#F0113FD1"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

    </ScrollView>

</LinearLayout>