<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/logo1"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/crown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#F0113FD1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sociox"
        android:layout_marginTop="-60dp"
        android:textColor="#F0113FD1"
        android:shadowColor="#BA03A9F4"
        android:shadowRadius="10"
        android:textSize="44sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo1" />

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="#F0113FD1"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="@+id/logo1"
        app:layout_constraintStart_toStartOf="@+id/logo1"
        app:layout_constraintTop_toBottomOf="@+id/logo1" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textColor="#F0113FD1"
        android:drawableStart="@drawable/logo_techzordic"
        android:drawableTint="#F0113FD1"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/from"
        app:layout_constraintStart_toStartOf="@+id/from"
        app:layout_constraintTop_toBottomOf="@+id/from"
        />
</androidx.constraintlayout.widget.ConstraintLayout>