<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_band"
            android:orientation="horizontal"
            android:paddingVertical="15dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="300dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/profile_img"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_profile"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/location" />

            </LinearLayout>


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="220dp"
                android:src="@drawable/three_dot" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scaleType="centerCrop"
            android:src="@drawable/first" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_band"
            android:orientation="horizontal"
            android:paddingVertical="15dp">


            <ImageView
                android:id="@+id/like_post"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/not_like" />


            <ImageView
                android:id="@+id/comment_post"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/comment" />

            <ImageView
                android:id="@+id/share_post"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/send_messages" />

            <ImageView
                android:id="@+id/save_post"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="220dp"
                android:src="@drawable/save" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingVertical="2dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/likedUser1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_stories"
                    app:cardCornerRadius="300dp">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/profile_img"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/likedUser2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-4dp"
                    android:background="@drawable/add_stories"
                    app:cardCornerRadius="300dp">

                    <ImageView
                        android:id="@+id/userImage2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/profile_img"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/likedUser3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-4dp"
                    android:background="@drawable/add_stories"
                    app:cardCornerRadius="300dp">

                    <ImageView
                        android:id="@+id/userImage3"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/profile_img"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <TextView
                android:id="@+id/peoplesLiked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/liked_by_username_and_12_others" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/username1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/username_comment"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all_comments"
                android:layout_marginStart="16dp"
                android:textColor="#928D8D"/>



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>